# flub-agent

./: CONVERTING_MCPS.md  IMESSAGE_SETUP.md  README.md  agent_server.py  example_usage.py  imessage-watcher.ts  main.py  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: SIMPLE_AGENT_X_API_UPDATE.md  X_API_TOOL.md
examples/: simple_agent_x_api_demo.py  x_api_example.py
src/: .env  intake_agent.py  orchestrator_agent.py  simple_agent.py
src/tools/: __init__.py  flight_search.py  weather.py  x_api.py
src/workers/: __init__.py  base_worker.py  browser_agent.py  flights.py  judge.py  weather_agent.py  worker1.py  worker2.py  worker3.py  x_agent.py
